added images for portfolio and bio

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>About | Your Name</title>
+  <title>About | Amiel Nicdao</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
@@ -11,7 +11,7 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Amiel Nicdao</a>
+      <a href="index.html" id="logo">Bio</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
@@ -22,15 +22,23 @@
 
   <div id="main-container" class="container">
     <section class="main-section">
-      <h1>About Me</h1>
+      <h1>Hi! I'm Amiel. Nice to meet you.</h1>
 
-      <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
+      <img src="assets/images/temp_profile_pic.jpg" class="auth-image" alt="Your Name">
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus vitae sollicitudin consectetur.</p>
+      <p>I am a full-stack web developer with a passion for taking ideas to something concrete. Being highly interested in the startup ecosystem has
+        led me to start a project which, then, brought me to software development. I enrolled into the Rutgers Coding Bootcamp so I can learn how to
+        program enough to build out the MVP. It was one of the most challenging experiences I've done, but also one of the most satisfying.
+      </p>
 
-      <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id eros iaculis, pulvinar quam eget, egestas mauris.</p>
+      <p>Having finished the bootcamp, I am looking to test my skills and acquire additional knowledge. I have built out other projects and continue to do so.
+        In programming, I have found what I can be passionate about doing work I can be proud of. 
+      </p>
 
-      <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+      <p>Got a project? Check out my work and let's connect!</p>
+
+      <a href="https://github.com/amielnicdao">GitHub</a>
+      <a href="https://www.linkedin.com/in/amielnicdao/">LinkedIn</a>
 
     </section>
 
@@ -38,7 +46,7 @@
 
   <footer>
     <div class="container">
-      Copyright &copy; 
+      Copyright &copy; Amiel Nicdao
     </div>
   </footer>
 </body>
