--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Portfolio | Your Name</title>
+  <title>Portfolio | Amiel Nicdao</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
@@ -24,30 +24,45 @@
     <section class="main-section">
       <h1>Portfolio</h1>
 
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+      <!-- <div class="work">
+        <img src="assets/images/questionmark.png" alt="Word Guess">
 
-        <h3>Word Guess</h3>
+        <h3>The Psychic Game</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+        <img src="assets/images/orange.png" alt="Crystal Game">
 
-        <h3>RPG Game</h3>
+        <h3>Oh, Crystals!</h3>
+      </div> -->
+      <!-- <div class="work">
+        <img src="assets/images/pokeball.jpg" alt="Pokemon Trivia">
+
+        <h3>PokeTrivia</h3>
+      </div> -->
+      <div class="work">
+        <img src="assets/images/travel.jpg" alt="Travel Giphy">
+
+        <h3>Travel Giphy</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+        <img src="assets/images/concert-this.PNG" alt="Liri Bot">
 
-        <h3>Trivia Game</h3>
+        <h3>JukeBot</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+        <img src="assets/images/managerTable.png" alt="Bamazon">
 
-        <h3>Rutgers Info Widget</h3>
+        <h3>Thingy</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+        <img src="assets/images/proxy.PNG" alt="Friend Finder">
 
-        <h3>Rock Paper Scissors</h3>
+        <h3>Proxy</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/burger.png" alt="Eat Da Burger">
+
+        <h3>Nibbler</h3>
       </div>
 
     </section>
